--- a/app/src/main/assets/scheme-test.html
+++ b/app/src/main/assets/scheme-test.html
@@ -17,6 +17,7 @@
 <p><a href="arouter://m.aliyun.com/test/activity2?key1=value1">arouter://m.aliyun.com/test/activity2?key1=value1</a></p>
 <p><a href="arouter://m.aliyun.com/test/activity3?name=alex&age=18&boy=true&high=180">arouter://m.aliyun.com/test/activity3?name=alex&age=18&boy=true&high=180</a></p>
 
+<!-- app link:  -->
 <h2>App Links[防止被App屏蔽]</h2>
 <p><a href="http://m.aliyun.com/test/activity1">http://m.aliyun.com/test/activity1</a></p>
 <p><a href="http://m.aliyun.com/test/activity2">http://m.aliyun.com/test/activity2</a></p>
